# b2-hm2

./: Dockerfile  README.md  pyproject.toml
Console-assistant/console-assistant/: commands_docs.py  commands_t9.py  notes.py  sort_folder.py  weather.py
testt/Console-assistant/: README.md  setup.py
testt/Console-assistant/console-assistant/: address_book.py  main.py
